--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ section{
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
-    opacity: 0;
+    transition: opacity 0.5s ease;
 }
 
 .intro h1{
@@ -55,6 +55,7 @@ section{
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%); 
+    transition: opacity 0.5s ease 0.5s ;
 }
 .winner{
     color: rgb(224, 224, 224);
@@ -72,7 +73,7 @@ section{
     transform: rotateY(180deg);
 }
 /* to  fade out */
-div.fadout{
+div.fadeOut{
     opacity: 0;
     pointer-events: none; /*cannot  click the button*/
 }
